RESOLVED FIXED115243
[Qt] fast/canvas/webgl/webgl-composite-modes.html broken after r148433.
https://bugs.webkit.org/show_bug.cgi?id=115243
Summary [Qt] fast/canvas/webgl/webgl-composite-modes.html broken after r148433.
Zeno Albisser
Reported 2013-04-26 04:42:40 PDT
Created attachment 199813 [details] actual The canvas seem scaled, plus the outline (light blue border) is missing.
Attachments
actual (17.87 KB, image/png)
2013-04-26 04:42 PDT, Zeno Albisser
no flags
expected (13.68 KB, image/png)
2013-04-26 04:43 PDT, Zeno Albisser
no flags
Patch (6.31 KB, patch)
2013-04-26 07:36 PDT, Noam Rosenthal
no flags
Zeno Albisser
Comment 1 2013-04-26 04:43:03 PDT
Created attachment 199814 [details] expected
Noam Rosenthal
Comment 2 2013-04-26 07:36:31 PDT
Zeno Albisser
Comment 3 2013-04-26 08:46:33 PDT
LGTM. I just tried it locally, and it seems to fix the issue. Thx a lot for looking into this that quickly!
WebKit Commit Bot
Comment 4 2013-04-29 02:52:01 PDT
Comment on attachment 199834 [details] Patch Clearing flags on attachment: 199834 Committed r149276: <http://trac.webkit.org/changeset/149276>
WebKit Commit Bot
Comment 5 2013-04-29 02:52:03 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.