[Qt] fast/canvas/webgl/webgl-composite-modes.html broken after r148433. https://bugs.webkit.org/show_bug.cgi?id=115243

Patch by Noam Rosenthal <noam@webkit.org> on 2013-04-29
Reviewed by Jocelyn Turcotte.

When compositing a layer with a canvas or directly composited image, it is
wrong to use TextureMapperLayer::setBackingStore. Instead, setContentsLayer
should be used, which allows for the layer to have both a backing store and
a contents layer.

* platform/graphics/texmap/TextureMapperLayer.cpp:
(WebCore::TextureMapperLayer::paintSelf):
* platform/graphics/texmap/TextureMapperLayer.h:
(State):
(WebCore::TextureMapperLayer::State::State):
* platform/graphics/texmap/coordinated/CoordinatedGraphicsScene.cpp:
(WebCore::CoordinatedGraphicsScene::createCanvasIfNeeded):
(WebCore::CoordinatedGraphicsScene::destroyCanvasIfNeeded):
(WebCore::CoordinatedGraphicsScene::assignImageBackingToLayer):

Canonical link: https://commits.webkit.org/133764@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149276 268f45cc-cd09-0410-ab3c-d52691b4dbfc